--- a/.github/workflows/syntax_check.yml
+++ b/.github/workflows/syntax_check.yml
@@ -14,5 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 7.4
+
     - name: No syntax error present
       run: bash -c 'find src -type f -name "*.php" -exec php -l {} \;'
