--- a/composer.json
+++ b/composer.json
@@ -3,40 +3,38 @@
     "description": "JIRA PHP console application for day-to-day development",
     "license": "GPL-3.0-or-later",
     "require": {
-        "php": ">= 7.4",
+        "php": ">= 8.1",
         "ext-json": "*",
         "ext-curl": "*",
-        "symfony/console": "^2.7",
-        "stecman/symfony-console-completion": "^0.5.1",
-        "guzzlehttp/guzzle": "^6.2",
-        "symfony/config": "^3.2",
-        "symfony/dependency-injection": "^2.7",
+        "symfony/console": "~6",
+        "guzzlehttp/guzzle": "~7",
+        "symfony/config": "~6",
+        "symfony/dependency-injection": "~6",
         "sirprize/queried": "^0.1.0",
-        "symfony/yaml": "^3.2",
-        "icanboogie/storage": "^2.1",
-        "technodelight/seconds-to-none": "^0.2.0",
-        "hoa/console": "^3.17",
+        "symfony/yaml": "~6",
+        "icanboogie/storage": "~4",
+        "technodelight/seconds-to-none": "~1.0",
         "ssnepenthe/color-utils": "^0.4.2",
         "technodelight/php-time-ago": "^1.1",
         "loilo/fuse": "^3.2",
-        "sebastian/diff": "^2.0",
+        "sebastian/diff": "~4",
         "technodelight/bytes-in-human": "^1.0",
         "technodelight/shell-exec": "^1.0",
         "technodelight/php-git": "^1.0",
-        "technodelight/symfony-configuration-cli-initialiser": "^1.0",
+        "technodelight/symfony-configuration-cli-initialiser": "^2.0",
         "symfony/expression-language": "^3.4",
-        "kriswallsmith/buzz": "^0.17.2",
-        "knplabs/github-api": "^2.10",
+        "kriswallsmith/buzz": "~1.2",
         "technodelight/php-cli-cross-platform-open": "^1.0",
         "technodelight/php-cli-editor-input": "^1.0",
         "technodelight/php-cli-iterm-image-renderer": "^1.0",
         "technodelight/php-jira-domain-models": "^1.4",
-        "technodelight/php-jira-cli-interfaces": "^1.0",
-        "technodelight/php-jira-cli-tag-converter": "^1.0"
+        "technodelight/php-jira-cli-interfaces": "^2.0",
+        "technodelight/php-jira-cli-tag-converter": "^2.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "behat/behat": "^3.3",
-        "phpspec/phpspec": "^2.5"
+        "phpspec/phpspec": "~7"
     },
     "authors": [
         {
