--- a/behat.yml
+++ b/behat.yml
@@ -2,10 +2,9 @@ default:
     suites:
         integration:
             paths:
-                - %paths.base%/features/integration/
+                - '%paths.base%/features/integration/'
 
             contexts:
                 - ApplicationContext
                 - GithubContext
                 - JiraContext
-                - TempoContext
