--- a/features/bootstrap/fixtures/configuration.yml
+++ b/features/bootstrap/fixtures/configuration.yml
@@ -3,7 +3,6 @@ instances:
     domain: fixtures.jira.phar
     username: zenc@zenc.hu
     password: topSecretPassword
-    worklogHandler: tempo
 
 # Project specific settings
 project:
@@ -14,9 +13,8 @@ project:
   # Default worklog timestamp to use if date is omitted
   defaultWorklogTimestamp: now
 
-tempo:
-  instances:
-    - { instance: default, apiToken: topSecretToken }
+transitions:
+  - { command: resolve, transition: 'Resolve' }
 
 # GitHub credentials - used to retrieve pull request data, including webhook statuses
 github:
@@ -25,4 +23,3 @@ github:
 extensions:
   class:
     - Technodelight\JiraGitHubExtension\Extension
-    - Technodelight\JiraTempoExtension\Extension
