--- a/build
+++ b/build
@@ -19,7 +19,7 @@ function formatBytes($size, $precision = 4)
     $base = log($size, 1024);
     $suffixes = ['', 'K', 'M', 'G', 'T'];
 
-    return round(pow(1024, $base - floor($base)), $precision) . ' ' . $suffixes[(int)floor($base)];
+    return round(1024 ** ($base - floor($base)), $precision) . ' ' . $suffixes[(int)floor($base)];
 }
 
 /**
