fix a lot of stuff, make acceptance test working again

--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
     },
     "scripts": {
         "test": [
-            "@test-unit"
+            "@test-unit",
+            "@test-acceptance"
         ],
         "test-unit": [
             "bin/phpspec --ansi run -fpretty"
