update composer tasks

--- a/composer.json
+++ b/composer.json
@@ -62,10 +62,10 @@
             "@test-acceptance"
         ],
         "test-unit": [
-            "bin/phpspec --ansi run -fpretty"
+            "phpspec --ansi run -fpretty"
         ],
         "test-acceptance": [
-            "bin/behat --colors"
+            "behat --colors"
         ],
         "build": [
             "./build"
