--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "technodelight/php-jira-cli-tag-converter": "^2.0",
         "knplabs/github-api": "^3.9",
         "cweagans/composer-patches": "^1.7",
-        "ext-readline": "*"
+        "ext-readline": "*",
+        "openai-php/client": "^0.8.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
