--- a/features/bootstrap/fixtures/configuration.yml
+++ b/features/bootstrap/fixtures/configuration.yml
@@ -16,10 +16,5 @@ project:
 transitions:
   - { command: resolve, transition: 'Resolve' }
 
-# GitHub credentials - used to retrieve pull request data, including webhook statuses
-github:
-  apiToken: topSecretToken # Required
-
-extensions:
-  class:
-    - Technodelight\JiraGitHubExtension\Extension
+#extensions:
+#  class:
