update configuration processing, split global configs to separate config files

--- a/features/bootstrap/fixtures/configuration.yml
+++ b/features/bootstrap/fixtures/configuration.yml
@@ -1,8 +1,8 @@
 instances:
   - name: default
     domain: fixtures.jira.phar
-    username: zenc@zenc.hu
-    password: topSecretPassword
+    email: zenc@zenc.hu
+    token: topSecretPassword
 
 # Project specific settings
 project:
